--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -9,3 +9,9 @@ dependencies:
   - gcc_linux-64
   - gxx_linux-64
   - ruby=2.5.*
+  - matplotlib
+  - lxml
+  - requests
+  - scikit-learn
+  - wget
+  - prophet
